crates/reinhardt-pages/tests/ui/page/fail/missing_img_alt.stderr
error: Element <img> requires 'alt' attribute
  --> tests/ui/page/fail/missing_img_alt.rs:13:3
   |
13 |         img {
   |         ^^^

error: Element <img> requires 'alt' attribute
  --> tests/ui/page/fail/missing_img_alt.rs:21:4
   |
21 |             img {
   |             ^^^
